# call-graph

./: Cargo.toml  README.md
src/: cli.rs  errors.rs  main.rs
src/analyzer/: call_graph.rs  mod.rs
src/parser/: ast_extractor.rs  mod.rs
src/visualizer/: graphviz.rs  mod.rs
